pass EXP04 : return List of lottery that existedUserId have